working_ASG/1-vpc.tf
resource "aws_vpc" "man_up" {
  cidr_block           = "10.20.0.0/16"
  instance_tenancy     = "default" # optional, default option is setting this argument to default
  enable_dns_hostnames = true
  enable_dns_support   = true # optional, defaults to true 

  tags = {
    Name = "man_up-vpc"
  }
}
